unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/Implementation_Wizard_Form_Detail__c.object-meta.xml
<CustomObject>
    <description>To store file and API request and response details of implementation wizard form</description>
    <label>Implementation Wizard Form Detail</label>
    <nameField>
        <label>Implementation Wizard Form Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation Wizard Form Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>