unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/Account_Plant__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to plant asset related to the form API request</description>
    <label>Account Plant</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>Implementation Wizard Form Details</relationshipLabel>
    <relationshipName>Implementation_Wizard_Form_Details</relationshipName>
    <type>Lookup</type>
</CustomField>