unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <description>This will help API to make the callout to get the relevant response</description>
    <label>API Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Data_Interface__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AlsoEnergy</fullName>
            </value>
            <value>
                <fullName>AQS</fullName>
            </value>
            <value>
                <fullName>GreenPowerMonitor</fullName>
            </value>
            <value>
                <fullName>LocusEnergy</fullName>
            </value>
            <value>
                <fullName>SolarEdge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>