unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/Data_Interface__c.field-meta.xml
<CustomField>
    <fullName>Data_Interface__c</fullName>
    <description>This will help user to select Data Interface type to show the dependent API type</description>
    <label>Data Interface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Datalogger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>