unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/Function_To_On_Screen__c.field-meta.xml
<CustomField>
    <fullName>Function_To_On_Screen__c</fullName>
    <formula>IF(Is_Created_in_CSV_Conversion__c , &#39;Revised File Upload&#39;, 
      IF(Is_Created_in_Neuron_Update__c,&#39;N3uron Tab Generation&#39;,&#39;API Request&#39;)
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Function To On Screen</label>
    <type>Text</type>
</CustomField>