unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/Is_Created_in_CSV_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_in_CSV_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field help us to identify the records created through CSV conversion. The identification will help to filter the records shown in the right side of Metadata Collector screen.</description>
    <label>Is Created in CSV Conversion</label>
    <type>Checkbox</type>
</CustomField>