unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/Is_Created_in_Neuron_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_in_Neuron_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field help us to identify the records created through Neuron Template Update.</description>
    <label>Is Created in N3uron Update</label>
    <type>Checkbox</type>
</CustomField>