unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/JSON_Stream__c.field-meta.xml
<CustomField>
    <fullName>JSON_Stream__c</fullName>
    <label>JSON Stream</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>