unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/Plant_API_Id__c.field-meta.xml
<CustomField>
    <fullName>Plant_API_Id__c</fullName>
    <description>To store the Plant Asset Id in the external system used for API</description>
    <label>Plant API Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>