unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/Plant_Id_PF_Text__c.field-meta.xml
<CustomField>
    <fullName>Plant_Id_PF_Text__c</fullName>
    <label>Plant Id PF Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>