unpackaged/main/default/objects/Implementation_Wizard_Form_Detail__c/fields/Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Message__c</fullName>
    <description>To track the response message from API</description>
    <label>Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>